# riffle

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  package-lock.json  package.json  tsconfig.base.json
apps/agent/: README.md  pyproject.toml
apps/agent/src/riffle_agent/: __init__.py  server.py  state.py
apps/agent/src/riffle_agent/graph/: __init__.py  build.py
apps/agent/src/riffle_agent/models/: registry.py
apps/agent/src/riffle_agent/tools/: sentinel.py
apps/agent/tests/: test_graph.py
apps/bff/: package.json  tsconfig.json
apps/bff/src/: auth.ts  index.ts  proxy.ts
apps/bff/src/routes/: chat.ts
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AnswerPanel.tsx  ErrorBanner.tsx  ExplanationPanel.tsx  FindingCard.tsx  NoticePanel.tsx  RemediationSteps.tsx  ScanSummary.tsx
apps/web/lib/: event-stream.ts
